src/components/card/Card.css
.card {
    background: #fff;
    height: 40rem;
    width: 32rem;
    padding: 2rem 2rem;
    box-shadow: 0 1rem 2rem rgba(0, 0, 0, .25);
    border-radius: 1rem;
    display: grid;
    grid-template-rows: 30% min-content 1fr;
    row-gap: 2rem;
    cursor: pointer;
    transform: scale(.9);
    transition: all .2s;
}

@media (hover: hover) {
    .card:hover {
        transform: translateY(-.15rem) scale(.95);
    }
}

.card-image {
    height: 100%;
    width: 80%;
    justify-self: center;
    border-radius: 1rem;
    /* opacity: .1; */
    /* margin: 5rem 0 -15rem; */
}

.card-title {
    font-size: 2rem;
    line-height: 2.6rem;
    
    padding: 1rem 0 0;
}

.card-description {
    font-size: 2rem;
    line-height: 2.6rem;
    width: 100%;
    height: 80%;
    font-family: var(--font-family-ar-2);
    padding: 0 2rem;
    overflow-y: scroll;
    -webkit-overflow-scrolling: touch;
}

.card-description::-webkit-scrollbar {
    width: .4rem;
}
 
.card-description::-webkit-scrollbar-track {
    display: none;
}
 
.card-description::-webkit-scrollbar-thumb {
    border-radius: .4rem;
    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.5); 
}

